--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,10 @@
   .wysiwyg img {
     @apply rounded-lg;
   }
+
+  .wysiwyg strong {
+    @apply font-bold italic;
+  }
 }
 :root {
   --foreground-rgb: 0, 0, 0;
